fixup - sonar suggested edits to CaseData implementation.