@@ -72,7 +72,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.probate.model.Constants.NO;
 import static uk.gov.hmcts.probate.model.Constants.YES;
@@ -741,14 +740,13 @@ public class CaseData extends CaseDataParent implements CommonLog {
     public List<CollectionMember<AliasName>> generateCombineDeceasedAliases() {
         List<CollectionMember<AliasName>> deceasedAliasNames = new ArrayList<>();
 
-        final Function<ProbateAliasName, AliasName> convertAliasType = (p) -> AliasName.builder()
+        final Function<ProbateAliasName, AliasName> convertAliasType = p -> AliasName.builder()
                 .solsAliasname(p.getForenames() + " " + p.getLastName())
                 .build();
 
         // The variable name does not reflect what the actual use is. The question asked is:
         //     Is the deceased name written the same way as on the will?
         // So we care if this is No, not Yes
-        final String deceasedAnyOtherNameOnWill = this.getDeceasedAnyOtherNameOnWill();
         final boolean shouldIncludeOtherNameOnWill = deceasedAnyOtherNameOnWill != null
                 && NO.equalsIgnoreCase(deceasedAnyOtherNameOnWill);
 
@@ -784,7 +782,7 @@ public class CaseData extends CaseDataParent implements CommonLog {
         Set<String> seenAliasNames = new HashSet<>();
         return deceasedAliasNames.stream()
                 .filter(aliasMember -> seenAliasNames.add(aliasMember.getValue().getSolsAliasname()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
